# lab2_tp

./: CMakeLists.txt  README.md  lab2.docx  main.cpp  run.bat
